Fix info-bar covering issue cover

--- a/src/themes/OLH/assets/scss/app.scss
+++ b/src/themes/OLH/assets/scss/app.scss
@@ -537,7 +537,7 @@ div.caption span.label {
 
   &.issue {
     .info-bar {
-      position: absolute;
+      position: relative;
       bottom: 0;
       left: 0;
       width: 100%;
